force-app/main/default/objects/Customer_Enquiry__c/Customer_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Customer Enquiry</label>
    <nameField>
        <displayFormat>CUS-ENQ-{000000}</displayFormat>
        <label>Customer Enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>