force-app/main/default/objects/Customer_Enquiry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Enquiries</relationshipLabel>
    <relationshipName>Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>