force-app/main/default/objects/Customer_Enquiry__c/fields/City_Selected__c.field-meta.xml
<CustomField>
    <fullName>City_Selected__c</fullName>
    <label>City Selected</label>
    <length>100</length>
    <type>Text</type>
</CustomField>