force-app/main/default/objects/Customer_Enquiry__c/fields/Enquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Status__c</fullName>
    <label>Enquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>