force-app/main/default/objects/Customer_Enquiry__c/fields/Quote_Deals_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Deals_of_Customer__c</fullName>
    <label>Quote Details for Customer</label>
    <length>7000</length>
    <type>LongTextArea</type>
</CustomField>