force-app/main/default/objects/Customer_Enquiry__c/fields/Select_Departure_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Select_Departure_Date_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Departure Date Range</label>
    <type>Checkbox</type>
</CustomField>