force-app/main/default/objects/Customer_Enquiry__c/recordTypes/Min_Number_Resolution.recordType-meta.xml
<RecordType>
    <fullName>Min_Number_Resolution</fullName>
    <active>true</active>
    <label>Min Number Resolution</label>
</RecordType>