force-app/main/default/objects/Customer_Enquiry__c/listViews/Min_Number_Resolution.listView-meta.xml
<ListView>
    <fullName>Min_Number_Resolution</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Enquiry__c.Min_Number_Resolution</value>
    </filters>
    <label>Min Number Resolution</label>
</ListView>