force-app/main/default/objects/Customer_Enquiry__c/listViews/Send_Enquiry.listView-meta.xml
<ListView>
    <fullName>Send_Enquiry</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>Destination__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Enquiry__c.Send_Enquiry</value>
    </filters>
    <label>Send Enquiry</label>
</ListView>